# IBM-RAG-and-Agentic-AI

./: README.md  main.py  pyproject.toml
BuildRAGApplications/: chat.py  common_input_types.py  gradio_demo.py  small_llm.py
BuildYourFirstGenAIApp/: In-Context Learning and Prompt Templates for Advanced AI.ipynb  lab-instructions.md
BuildYourFirstGenAIApp/genai_flask_app/: app.py  capital.py  config.py  model.py  pyproject.toml
