[project]
name = "ibm-rag-and-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibm-watsonx-ai==1.0.8",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "langchain==0.2.11",
    "langchain-core==0.2.43",
    "langchain-ibm==0.1.7",
]
